--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -11,7 +11,7 @@ jobs:
           run: sudo apt-get install cowsay -y
 
         - name: Execute Cowsay CMD
-          run: Cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dargon.txt
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dargon.txt
 
         - name: Sleep for 30 seconds
           run: sleep 30
