--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -39,9 +39,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dragon-text-file
-          
+
         - name: Read Files
-          run: cat dragon.txt'
+          run: cat dragon.txt
 
         - name: Deploy
           run: echo Deploying ... .. .
