--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -11,7 +11,7 @@ jobs:
       run: sudo apt-get install cowsay -y
 
     - name: Execute Cowsay CMD
-      run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dargon.txt
+      run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
 
     - name: Upload Dragon Text file
       uses: actions/upload-artifact@v4
@@ -32,7 +32,7 @@ jobs:
       run: grep -i "dragon" dragon.txt
 
   deploy_job_3:
-    needs: test_job_2
+    needs: [test_job_2]
     runs-on: ubuntu-latest
     steps:
     - name: Download Dragon Text file
