--- a/.github/workflows/variable-secrets.yaml
+++ b/.github/workflows/variable-secrets.yaml
@@ -101,7 +101,6 @@ on: push
 
 env:
   CONTAINER_REGISTRY: docker.io
-  DOCKER_USERNAME: oliver
   IMAGE_NAME: github-actions-nginx
 
 jobs:
@@ -111,10 +110,8 @@ jobs:
     - name: Docker Build
       run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
-    - name: Docker Login
-      env:
-        DOCKER_PASSWORD: s3csonPassword
-      run: docker login --username=${{env.DOCKER_USERNAME}} --password=$DOCKER_PASSWORD
+    - name: Docker Login 
+      run: docker login --username=${{env.DOCKER_USERNAME}} --password=${{secrets.DOCKER_PASSWORD}}
 
     - name: Docker Publish
       run: docker push ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
