--- a/.github/workflows/variable-secrets.yaml
+++ b/.github/workflows/variable-secrets.yaml
@@ -108,18 +108,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Build
-      run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+      run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
     - name: Docker Login 
-      run: docker login --username=${{env.DOCKER_USERNAME}} --password=${{secrets.DOCKER_PASSWORD}}
+      run: docker login --username=${{vars.DOCKER_USERNAME}} --password=${{secrets.DOCKER_PASSWORD}}
 
     - name: Docker Publish
-      run: docker push ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+      run: docker push ${{env.CONTAINER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
   deploy:
     needs: [docker]
     runs-on: [ubuntu-latest]
     steps:
     - name: Docker Run
-      run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+      run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
